# pharmacist-agent

./: README.md  mcp_chatbot.py  pyproject.toml  research_server.py  server_config.json
papers/acetaminophen_sore_throat_pain_relief/: papers_info.json
papers/benzocaine_sore_throat_relief/: papers_info.json
papers/headache_treatment_medication/: papers_info.json
papers/knee_pain_otc_medication/: papers_info.json
papers/nasal_congestion_treatment/: papers_info.json
papers/over_the_counter_sore_throat_remedies/: papers_info.json
papers/runny_nose/: papers_info.json
papers/runny_nose_treatment/: papers_info.json
papers/sore_throat/: papers_info.json
papers/sore_throat_treatment/: papers_info.json
papers/sore_throat_treatment_otc/: papers_info.json
